--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -438,7 +438,7 @@ Finnish is another example of a language that allows subjects and direct objects
  `The boy who had danced on the table was sick.'\label{ex:finnish-rel-sbj}
 \bg. Näkemäni \tbf{poika} tanssi pöydällä.\\
  I-having-seen boy danced on-table\\
- `The boy that I saw danced on the table.'\label{ex:finnish-rel-obj}
+ `The boy that I saw danced on the table.'\flushfill{Finnish, \pgcitealt{keenan1977}{71}}\label{ex:finnish-rel-obj}
 
 Basque is an example of a language that has a particular relativization strategy for subjects, direct objects and indirect objects. \ref{ex:basque-decl} is an example of a declarative ditransitive sentence in Basque. The sentence contains the subject \tit{gizonak} `the man', the direct object \tit{liburua} `the book' and the indirect object \tit{emakumeari} `the woman'.
 
@@ -515,11 +515,7 @@ In \ref{ex:dyirbal-abs-do}, the absolutive object \tit{d̦ugumbil} `woman' from 
 
 Ergatives (for instance the ergative subject \tit{ŋad̦a} `I' in \ref{ex:dyirbal-tra}) cannot be directly relativized. They have to be promoted to absolutives first, creating a passive-like structure. In other words, only relativization of absolutives is possible, ergatives cannot be relativized.
 
-%johnson abs/erg (keenan/comrie) already claimed the abs/erg absolutive relativization should be captured in terms of case and not grammatial function.
-
-\citet{caha2009} (which is also briefly mentioned in \citealt{bobaljik2006}) makes the more general claim, that also nom/acc should be formulized in terms of case, all of it together.
-
-Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
+In conclusion, just like the agreement hierarchy, the relativization hierarchy is formalized best in terms of morphological case \citep[cf.][]{caha2009}. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
 
 \begin{figure}[ht]
   \centering
@@ -568,7 +564,7 @@ In sum, this section has shown that relativization follows the same implicationa
 
 \section{In morphology}\label{sec:case-morphology}
 
-In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it appears in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the identical implicational holds for relativization strategies cross-linguistically.
+In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it appears in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the same implicational holds for relativization strategies cross-linguistically.
 
 In this section, I show that this same case scale can be observed in morphology. First, syncretism only targets continuous regions on the case scale. Second, several languages show formal containment that mirrors the case scale.
 
@@ -580,13 +576,13 @@ Syncretism refers to the phenomenon whereby two or more different functions are 
 It has widely been observed that syncretism is restricted by the linear sequence \ac{nom} --- \ac{acc} --- \ac{dat} \citep{baerman2005,caha2009,zompi2017} (and see \citealt{mcfadden2018,smith2019} for similar claims concerning root suppletion). That is, if one orders cases in this linear sequence, only contiguous regions in the sequence turn out to be syncretic.
 Following that, four possible patterns are attested crosslinguistically. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
 
-There is one pattern that is not attested crosslinguistically. This pattern does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. In other words, there is no ABA pattern (in which a form B intervenes between the two identically formed As) \citep{bobaljik2012}.
+There is one pattern that is not attested crosslinguistically. This pattern does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. In other words, what does not exist is an ABA pattern, in which a form B intervenes between the two identically formed As \citep{bobaljik2012}.
 
 Table \ref{tbl:syncretisms} shows examples for each of these possible patterns.
-I give an example from three distinct forms from Faroese. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
-I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\ac{pl}' is syncretic between nominative, accusative and dative.
-I give an example from a syncretism between accusative and dative but not nominative from Icelandic. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
-I give an example from a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
+I give an example of three distinct forms from Faroese. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
+I give an example of a complete syncretism for nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\ac{pl}' is syncretic between all three cases.
+I give an example of a syncretism between accusative and dative but not nominative from Icelandic. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
+I give an example of a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
 Crucially, to the best of my knowledge, there is no language in which the nominative and the dative are syncretic but the accusative is not.
 
 \begin{table}[ht]
@@ -605,7 +601,7 @@ This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is refle
 
 Khanty (or Ostyak) shows formal containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
 
-The nominative form for the first person singular is \tit{ma} `I.\ac{nom}'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. So, dative formally contains the accusative, and the accusative formally contains the nominative.
+The nominative form for the first person singular is \tit{ma} `I'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. So, dative formally contains the accusative, and the accusative formally contains the nominative.
 
 The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
 
@@ -645,8 +641,8 @@ Case competition in headless relatives adheres to the case scale in \ref{ex:case
 This case scale is not only found in case competition in headless relatives. Implicational hierarchies regarding two syntactic phenomena appear across languages. The first one concerns agreement. If a language shows agreement with datives, it also shows agreement with accusatives and nominatives. If a language shows agreement with accusatives, it also shows agreement with nominatives.
 The second implicational hierarchy concerns relativization. If a dative in a language can be relativized with a particular strategy, an accusative and a nominative can be too using the same strategy. If an accusative can be relativized with a particular strategy, so can a nominative with this strategy.
 
-The case scale can also be observed in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show how the dative formally contains accusative, and how the accusative formally contains the nominative.
+The case scale can also be observed in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show that the dative formally contains accusative, and that the accusative formally contains the nominative.
 
-These phenomena show that the pattern observed in headless relatives is not something that stands on itself. The scale is a pattern that recurs across languages and across different phenomena. Therefore, it should not be treated as an special process with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
+These phenomena show that the pattern observed in headless relatives is not something that stands on itself. The scale is a pattern that recurs across languages and across phenomena. Therefore, it should not be treated as an special process with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
 
-The next chapter shows how features of the nominative, accusative and dative are organized. All facts presented in this chapter can be derived from the organization of these features.
+The next chapter shows how features of the nominative, accusative and dative are organized. The syntax fact presented in this chapter can be derived from the organization of these features.
