begin uitwerken modern german syntax
BAM!

--- a/relativization.tex
+++ b/relativization.tex
@@ -13,28 +13,49 @@ With this in mind, I argue for a similar analysis for OHG and Gothic. OHG and Go
 
 \section{Modern German}
 
-The basic pattern: a bigger internal case can license a smaller external case, not the other way around.
+Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case. Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, so the case of the relative clause. I interpret this as follows: the relative pronoun is part of the relative clause and it can license a smaller case in the main clause.
+
+Evidence for the relative pronoun being in the relative clause is Modern German does not only come from the case facts, but also from the shape of the relative pronoun. The relative pronoun in Modern German is a \tsc{wh}-pronoun. \tsc{wh}-pronouns in Modern German typically appear at the left edge of the clause. X is an example of a \tsc{wh} in nominative.
+
+\exg. Was machst du?\\
+ \\
+ `'
+
+But also accusatives, see X, which as non-\tsc{wh} do not appear at the left edge of the clause.
+
+\ex.
+\ag. Wen hast du gestern gesehen?\\
+ \\
+ `'
+\bg. Ich habe ihn gestern gesehen.\\
+ \\
+ `'
+
+Specifically for headless relatives, it can also be shown that the relative pronoun in Modern German is part of the relative clause, and not outside of it. Evidence comes from extraposition.
+
+So, the relative clause of the headless relative in X looks like Y.
+
+--give headless relative example--
+
+--now give a tree with acc in the left periphery, as part of the relative clause--
+
+But how does it license this external nominative?
+
+
+I propose that there is an external head.
+
+--give here a table with on one side the tree repeated and on the other side the head, with relP at the bottom?-- %split the relative pronoun up in the w part and the other part?
+
+Now this accusative here can license an external nominative case. The idea is: it is inside this accusative already. We understand why it could not license a dative: \tsc{f3} is not contained in the accusative.
 
 
 
-
-\subsection{Deleted head story}
 
 \begin{itemize}
-  \item \tsc{wh}-elements are inside the relative clause
-  \begin{itemize}
-    \item Arguments come from extraposition, \tsc{wh}-elements are often found in the left periphery?, .. more?
-    \item \tsc{wh}-pronoun is in the relative clause, so therefore takes the relative clause case. From there it licenses the main clause case.
-  \end{itemize}
-  \item How does the pronoun license the main clause case?
-  \begin{itemize}
-    \item There is an external head that is deleted if it has a smaller case
-    \item The other way around does not work, because a small head cannot delete a big head
-  \end{itemize}
   \item Arguments in favor of this head
   \begin{itemize}
-    \item For headless relatives: it is needed to distinguish German from Polish
     \item For relatives in general: there exist languages that have double heads
+    \item For headless relatives: it is needed to distinguish German from Polish %for this we need the wh-property..
   \end{itemize}
   \item Where is this head?
   \begin{itemize}
