ietsje verder met redenering

--- a/relativization.tex
+++ b/relativization.tex
@@ -4,40 +4,88 @@
 
 So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
-I interpret the missing head as: there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does.
+In this section I discuss the matter whether it is actually the relative pronoun or the head of the relative clause that surfaces in headless relatives. I argue that for Modern German it is always the relative pronoun in the relative clause that surfaces. This follows from the fact that Modern German has \tsc{wh}-pronouns as relative pronouns in its headless relatives. In Gothic and Old High German it is sometimes the relative pronoun and sometimes the (light) head of the relative clause that surfaces as relative pronoun. This is a consequence of the \tsc{d}-morphology of the relative pronoun in Old High German and Gothic.
 
-With this in mind, I argue for a similar analysis for OHG and Gothic. OHG and Gothic also independently show that they can be derived from a double element structure. This additional evidence for the double-headed structure is also exactly the reason why Modern German behave differently from the other two languages with respect to its case facts.
-
-
+In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
 
 
 \section{Modern German}
 
-Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case. Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, so the case of the relative clause. I interpret this as follows: the relative pronoun is part of the relative clause and it can license a smaller case in the main clause.
+Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case. Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause.
 
-Evidence for the relative pronoun being in the relative clause is Modern German does not only come from the case facts, but also from the shape of the relative pronoun. The relative pronoun in Modern German is a \tsc{wh}-pronoun. \tsc{wh}-pronouns in Modern German typically appear at the left edge of the clause. X is an example of a \tsc{wh} in nominative.
+I connect this behavior of Modern German headless relatives to the shape of its relative pronouns. Modern German has \tsc{wh}-pronouns as relative pronouns in headless relative constructions. In this section I show that it is a consequence of having \tsc{wh}-pronouns as relative pronouns that the internal case can only surface as winner in the case competition. The different behavior of Gothic and Old High German headless relatives follows from the \tsc{d}-pronoun these languages use as their relative pronouns.
 
-\exg. Was machst du?\\
- \\
- `'
+(1) \tsc{wh}-relatives are part of the relative clause, not of the main clause. (2) the internal-as-winner-only requirement follows from the relative pronoun being within the relative clause
 
-But also accusatives, see X, which as non-\tsc{wh} do not appear at the left edge of the clause.
+Relative pronouns in headless relatives are sensitive to the internal and the external case. Is the relative pronoun in Modern German in the main clause or in the embedded clause?
+
+To answer that question I first step away a bit from the case facts of Modern German headless relatives, and I consider \tsc{wh}-pronouns in general in the language. \tsc{wh}-pronouns in Modern German typically appear at the left edge of the clause, just like in other \tsc{wh}-moving languages. An example with \tit{wen} `who' is given in \ref{ex:german-wh-left}. Non-\tsc{wh}-pronouns do not necessarily appear at the left edge of the clause, just as \tit{ihn} `him' in \ref{ex:german-non-wh-not-left}.
 
 \ex.
 \ag. Wen hast du gestern gesehen?\\
- \\
- `'
+ Who have you yesterday seen\\
+ `Who did you see yesterday?'\label{ex:german-wh-left}
 \bg. Ich habe ihn gestern gesehen.\\
- \\
- `'
+ I have him yesterday seen\\
+ `I saw him yesterday.'\label{ex:german-non-wh-not-left}
 
 Specifically for headless relatives, it can also be shown that the relative pronoun in Modern German is part of the relative clause, and not outside of it. Evidence comes from extraposition.
 
+In headless relatives it is clear that the head is part of the main clause and the relative pronoun pronoun marks the left edge of the relative clause. \ref{ex:extra-headed-base} gives an example of a headed relative clause with the relative clause in base position. \tit{das Geld} `the money' is the head of the relative clause an \tit{das er gestohlen hat} `that he stole' is the relative clause.
+\ref{ex:extra-headed-only-clause} gives an example with the relative clause extraposed, so at the right edge of the clause. The head of the relative clause is left behind. This is grammatical. This means that a relative clause can be extraposed.
+\ref{ex:extra-headed-head-clause} gives an example with the relative caluse extraposed and the head of the relative clause with it. This is ungrammatical in Modern German. This means that the head of the relative clause cannot be extraposed.
+
+\ex. \citet[185]{groos1981}\label{ex:extra-headed}
+\ag. Der Hans hat das Geld, \tbf{das} \tbf{er} \tbf{gestohlen} \tbf{hat}, zurückgegeben.\\
+the Hans has the money which he stolen has returned\\
+\glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-base}
+\bg. Der Hans hat das Geld zurückgegeben, \tbf{das} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+the Hans has the money returned which he stolen has\\
+\glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-only-clause}
+\cg. *Der Hans hat zurückgegeben, das Geld, \tbf{das} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+the Hans has returned the money which he stolen has\\
+\glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
+
+Now \ref{ex:extra-headless} shows two examples with headless relative clause extraposition. It illustrates that the \tsc{wh}-pronoun is at the left edge of the relative clause, and it is not
+
+\ex.\citet[185]{groos1981}\label{ex:extra-headless}
+\ag. Der Hans hat zurückgegeben, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+the Hans has returned what he stolen has\\
+\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-good}
+\bg. *Der Hans hat \tbf{was} zurückgegeben, \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+the Hans has what returned he stolen has\\
+\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-bad}
+
 So, the relative clause of the headless relative in X looks like Y.
 
---give headless relative example--
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
 
---now give a tree with acc in the left periphery, as part of the relative clause--
+ \ex.
+ \begin{forest} boom
+		 	[CP,no edge, s sep=20mm
+	       [\ac{acc}P,
+				 tikz={
+				 \node[label=below:\tit{wen},
+				 draw,circle,
+				 scale=0.85,
+				 fit to=tree]{};
+				 }
+	           [\tsc{f2}]
+	           [\tsc{nomP}
+	               [\tsc{f1}]
+	               [\tsc{rel}P
+	                   [\phantom{xxx}, roof]
+	               ]
+	           ]
+	       ]
+				 [VP
+				 		 [\tit{Maria mag}, roof]
+				 ]
+			]
+ \end{forest}
+
 
 But how does it license this external nominative?
 
@@ -63,15 +111,97 @@ Now this accusative here can license an external nominative case. The idea is: i
     \item Somewhere where it can receive case from the main clause
     \item Where it normally is in SOV languages (does the thing in Polish move because it is a svo language?)
   \end{itemize}
-  \item Illustrating this with German
-  \begin{itemize}
-    \item One example that works
-    \item One example that does not work
-  \end{itemize}
 \end{itemize}
 
 
+So this works.
 
+\ex.
+\begin{forest} boom
+[, s sep=20mm
+    [CP, s sep=20mm
+        [\ac{acc}P,
+        tikz={
+        \node[label=below:\tit{wen},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f2}]
+            [\tsc{nomP},
+            tikz={
+            \node[draw,circle,transparent,
+            fill=DG,fill opacity=0.2,
+            scale=0.8,
+            fit to=tree]{};
+            }
+                [\tsc{f1}]
+                [\tsc{rel}
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+        ]
+        [VP
+            [\tit{Maria mag}, roof]
+        ]
+    ]
+    [\textcolor{LG}{\tsc{nomP}},
+    tikz={
+    \node[draw,circle,
+    scale=0.8,
+    fit to=tree]{};
+    }
+        [\textcolor{LG}{\ac{nom}},edge=LG]
+        [\textcolor{LG}{\tsc{rel}},baseline,edge=LG
+            [\textcolor{LG}{\phantom{xxx}},
+            roof, baseline, edge=LG
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+But here it does not.
+
+\ex.
+\begin{forest} boom
+[, s sep=20mm
+    [CP, s sep=20mm
+        [\ac{nom}P,
+        tikz={
+        \node[label=below:\tit{wer},
+        draw,circle,
+        fill=DG,fill opacity=0.2,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f1}]
+            [\tsc{rel}P
+                [\phantom{xxx}, roof]
+            ]
+        ]
+        [VP
+            [\tit{mir sympatisch ist}, roof]
+        ]
+    ]
+    [\ac{acc}P
+        [\tsc{f2}]
+        [\textcolor{LG}{\tsc{nomP}},
+        tikz={
+        \node[draw,circle,
+        scale=0.8,
+        fit to=tree]{};
+        }
+            [\textcolor{LG}{\ac{nom}},edge=LG]
+            [\textcolor{LG}{\tsc{rel}},baseline,edge=LG
+                [\textcolor{LG}{\phantom{xxx}},
+                roof, baseline, edge=LG
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
 
 
 
