--- a/relativization.tex
+++ b/relativization.tex
@@ -56,11 +56,15 @@ the Hans has returned what he stolen has\\
 the Hans has what returned he stolen has\\
 \glt `Hans has returned what he has stolen.'\label{ex:extra-headless-bad}
 
-So, the relative clause of the headless relative in X looks like Y.
+Conclusion: the \tsc{wh}-pronoun is part of the relative clause in Modern German.
+
+With that in mind, let us look at the case competition facts again. The pattern is as follows: only an internal case can surface. Here the accusative wins over the nominative.
 
 \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
+
+This can be modelled as follows:
 
  \ex.
  \begin{forest} boom
@@ -86,32 +90,62 @@ So, the relative clause of the headless relative in X looks like Y.
 			]
  \end{forest}
 
+The structure shows an accusative in the relative clause. An \tsc{acc}P by definition contains a \tsc{nom}P, so the nominative is there.
 
-But how does it license this external nominative?
+We also understand that the other way around does not work: a nominative in the relative clause does not contain an accusative.
 
+Two problems arise: (1) if we follow this logic, do we not expect all languages with \tsc{wh}-pronouns as headless relative pronouns to show this type of case competition? A counterexample to that generalization is Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
 
-I propose that there is an external head.
+\ex.
+\ag. Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
+Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease.3\tsc{sg}\scsub{[dat]}\\
+`Jan likes whoever he teases.'
+\bg. Jan ufa \tbf{komu} \tbf{(kolwiek)} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
+ Jan trust.3\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever let.3\tsc{sg}\scsub{[acc]} to home\\
+ `Jan trusts whoever he let into the house.'
+
+The second issue: (2) how does this licensing take place? Normally we have a single DP satisfying the case of a single V. What is happening here?
+
+I propose a single answer to both of these questions: there is an external head. This is the head of the relative clause, and it is deleted in Modern German as long as it is smaller than the relative pronoun. This external head in Polish is not deleted: it does not add any extra definiteness or indefiniteness. Before I show how this works exactly, I show some independent evidence for assuming that there is this head.
+
+There is also independent evidence for this head, namely from languages that actually let the head surface.
+
+\exg. doü adiyano-no \tbf{doü} deyalukhe\\
+ sago give.3\tsc{pl}.\tsc{nonfut}-\tsc{conn} sago finished.\tsc{ajd}\\
+ `The sago that they gave is finished.' \flushfill{Kombai, Dryer 2005}
+
+\exg. gana gu fali-kha \tbf{ro} na-gana-y-a\\
+ {bush knife} 2\tsc{sg} carry-go.\tsc{2sg}.\tsc{nonfut} my-{bush knife}-\tsc{tr-pred}\\
+ `The bush knife that you took away, is my bush knife.'
+
+\exg. yare gamo khereja bogi-n-o \tbf{rumu} na-momof-a\\
+ {old man} join.\tsc{ss} work \tsc{dur}.do.\tsc{3sg}.\tsc{nf}-\tsc{tr}-\tsc{conn} person my-uncle-\tsc{pred}\\
+ `The old man who is joining the work is my uncle.'
+
+\ex.
+\ag. Junya-wa[Ayaka-gamui-taringo]-otabe-ta.\\
+ Junya-topAyaka-nompeel-pastapple-acceat-past\\
+ ‘Junya ate the apples that Ayaka peeled.’
+\bg. Junya-wa[Ayaka-garingo-omui-ta-no]-otabe-ta.\\
+ Junya-topAyaka-nomapple-accpeel-past-no-acceat-past\\
+ literally ‘Junya ate [that Ayaka peeled apples].’
+\bg. Junya-wa[Ayaka-garingo-omui-tasono-ringo]-otabe-ta.\\
+ Junya-topAyaka-nomapple-accpeel-pastthat-apple-acceat-past\\
+ literally ‘Junya ate [those apples that Ayaka peeled apples].’
+
+So, we have the head.
 
 --give here a table with on one side the tree repeated and on the other side the head, with relP at the bottom?-- %split the relative pronoun up in the w part and the other part?
 
 Now this accusative here can license an external nominative case. The idea is: it is inside this accusative already. We understand why it could not license a dative: \tsc{f3} is not contained in the accusative.
 
+Where is this head in the syntactic structure?
 
-
-
-\begin{itemize}
-  \item Arguments in favor of this head
-  \begin{itemize}
-    \item For relatives in general: there exist languages that have double heads
-    \item For headless relatives: it is needed to distinguish German from Polish %for this we need the wh-property..
-  \end{itemize}
-  \item Where is this head?
   \begin{itemize}
     \item Somewhere where the relative pronoun can delete it: where it is c-commanded by the relative pronoun
     \item Somewhere where it can receive case from the main clause
     \item Where it normally is in SOV languages (does the thing in Polish move because it is a svo language?)
   \end{itemize}
-\end{itemize}
 
 
 So this works.
@@ -207,15 +241,7 @@ But here it does not.
 
 
 
-But if we follow the logic I just sketched, I expect all languages that have \tsc{wh}-pronouns as relative pronouns to allow for letting the internal case win in case competition. This prediction is incorrect. There are languages like Polish, which are so-called `strictly matching'. They always give an ungrammatical result when there is case competition (and not syncretism or two identical cases).
-
-\ex.
-\ag. Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
-Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease.3\tsc{sg}\scsub{[dat]}\\
-`Jan likes whoever he teases.'
-\bg. Jan ufa \tbf{komu} \tbf{(kolwiek)} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
- Jan trust.3\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever let.3\tsc{sg}\scsub{[acc]} to home\\
- `Jan trusts whoever he let into the house.'
+But if we follow the logic I just sketched, I expect all languages that have \tsc{wh}-pronouns as relative pronouns to allow for letting the internal case win in case competition. This prediction is incorrect.
 
 Under the grafting analysis, there is nothing that distinguishes Polish from Modern German, so there is no reason for the Polish example in X to be incorrect. The other one is ungrammatical, just as the German one, but the first one is too, and that is unexpected.
 
@@ -245,29 +271,6 @@ So, Polish has an `out', which German does not have.
 
 What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
 
-\exg. doü adiyano-no \tbf{doü} deyalukhe\\
- sago give.3\tsc{pl}.\tsc{nonfut}-\tsc{conn} sago finished.\tsc{ajd}\\
- `The sago that they gave is finished.' \flushfill{Kombai, Dryer 2005}
-
-\exg. gana gu fali-kha \tbf{ro} na-gana-y-a\\
- {bush knife} 2\tsc{sg} carry-go.\tsc{2sg}.\tsc{nonfut} my-{bush knife}-\tsc{tr-pred}\\
- `The bush knife that you took away, is my bush knife.'
-
-\exg. yare gamo khereja bogi-n-o \tbf{rumu} na-momof-a\\
- {old man} join.\tsc{ss} work \tsc{dur}.do.\tsc{3sg}.\tsc{nf}-\tsc{tr}-\tsc{conn} person my-uncle-\tsc{pred}\\
- `The old man who is joining the work is my uncle.'
-
-
-\ex.
-\ag. Junya-wa[Ayaka-gamui-taringo]-otabe-ta.\\
- Junya-topAyaka-nompeel-pastapple-acceat-past\\
- ‘Junya ate the apples that Ayaka peeled.’
-\bg. Junya-wa[Ayaka-garingo-omui-ta-no]-otabe-ta.\\
- Junya-topAyaka-nomapple-accpeel-past-no-acceat-past\\
- literally ‘Junya ate [that Ayaka peeled apples].’
-\bg. Junya-wa[Ayaka-garingo-omui-tasono-ringo]-otabe-ta.\\
- Junya-topAyaka-nomapple-accpeel-pastthat-apple-acceat-past\\
- literally ‘Junya ate [those apples that Ayaka peeled apples].’
 
 
 \tit{as} is deleted because it cannot surface on its own? why not?
